--- a/android/app/src/main/res/layout/splash_screen.xml
+++ b/android/app/src/main/res/layout/splash_screen.xml
@@ -7,6 +7,53 @@
     android:clipToPadding="false"
     android:clipToOutline="false">
 
+    <!-- Speed lines container with absolute positioning -->
+    <FrameLayout
+        android:id="@+id/speed_lines_container"
+        android:layout_width="240dp"
+        android:layout_height="120dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="80dp"
+        android:elevation="2dp"
+        android:clipChildren="false"
+        android:clipToPadding="false"
+        android:clipToOutline="false">
+
+        <ImageView
+            android:id="@+id/speed_line_1"
+            android:layout_width="1dp"
+            android:layout_height="120dp"
+            android:layout_marginStart="40dp"
+            android:background="@color/splashBackground"
+            android:alpha="0.4" />
+
+        <ImageView
+            android:id="@+id/speed_line_2"
+            android:layout_width="1dp"
+            android:layout_height="120dp"
+            android:layout_marginStart="95dp"
+            android:background="@color/splashBackground"
+            android:alpha="0.45" />
+
+        <ImageView
+            android:id="@+id/speed_line_3"
+            android:layout_width="1dp"
+            android:layout_height="120dp"
+            android:layout_marginStart="150dp"
+            android:background="@color/splashBackground"
+            android:alpha="0.4" />
+
+        <ImageView
+            android:id="@+id/speed_line_4"
+            android:layout_width="1dp"
+            android:layout_height="120dp"
+            android:layout_marginStart="205dp"
+            android:background="@color/splashBackground"
+            android:alpha="0.45" />
+
+    </FrameLayout>
+
     <!-- Icon container with padding for movement -->
     <FrameLayout
         android:id="@+id/icon_container"
@@ -27,41 +74,6 @@
             android:scaleType="fitCenter"
             android:tint="@color/splashBackground"
             android:clipToOutline="false" />
-
-    </FrameLayout>
-
-    <!-- Speed lines container with absolute positioning -->
-    <FrameLayout
-        android:id="@+id/speed_lines_container"
-        android:layout_width="240dp"
-        android:layout_height="120dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="80dp"
-        android:clipChildren="false"
-        android:clipToPadding="false"
-        android:clipToOutline="false">
-
-        <ImageView
-            android:id="@+id/speed_line_1"
-            android:layout_width="2dp"
-            android:layout_height="120dp"
-            android:layout_marginStart="40dp"
-            android:background="@color/splashBackground" />
-
-        <ImageView
-            android:id="@+id/speed_line_2"
-            android:layout_width="2dp"
-            android:layout_height="120dp"
-            android:layout_marginStart="120dp"
-            android:background="@color/splashBackground" />
-
-        <ImageView
-            android:id="@+id/speed_line_3"
-            android:layout_width="2dp"
-            android:layout_height="120dp"
-            android:layout_marginStart="200dp"
-            android:background="@color/splashBackground" />
 
     </FrameLayout>
 
